--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -7,12 +7,19 @@
 </head>
 <body>
     <h1>Профиль</h1>
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{ message }}</p>
+        {% endfor %}
+    {% endif %}
     <p>Имя: {{ user.username }}</p>
     <p>Email: {{ user.email }}</p>
     <p>Имя: {{ user.first_name }}</p>
     <p>Фамилия: {{ user.last_name }}</p>
     <p>Дата регистрации: {{ user.date_joined }}</p>
     <a href="{% url 'users:profile_update' %}">Изменить данные</a>
+    <a href="{% url 'users:password_update' %}">Сменить пароль</a>
+    <a href="{% url 'users:reset_password' %}">Сбросить пароль</a>
     <a href="{% url 'users:logout' %}">Выйти</a>
     <a href="{% url 'posts:post_list' %}">Назад</a>
 </body>
