--- a/posts/templates/posts/post_update.html
+++ b/posts/templates/posts/post_update.html
@@ -14,9 +14,7 @@
     {% endif %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <p>Заголовок: <input type="text" name="title" value="{{ post.title }}"></p>
-        <p>Содержание: <textarea name="content">{{ post.content }}</textarea></p>
-        <p>Изображение: <input type="file" name="image"> {% if post.image %}<img src="{{ post.image.url }}" width="100">{% endif %}</p>
+        {{ form.as_p }}
         <button type="submit">Сохранить</button>
     </form>
     <a href="{% url 'posts:post_list' %}">Назад</a>
