--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,10 @@ h2 {
     text-shadow: 1px 1px #000;
     font-size: 1.8em;
 }
+h3 {
+    color: #ffd700;
+    font-size: 1.5em;
+}
 a {
     color: #00b7eb;
     text-decoration: none;
@@ -55,6 +59,16 @@ img {
     display: block;
     margin: 10px auto;
     max-width: 300px;
+}
+.post ul {
+    list-style-type: none;
+    padding: 0;
+}
+.post ul li {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #444;
+    border-radius: 5px;
 }
 hr {
     border: 1px solid #ff0000;
