--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -52,6 +52,19 @@
     {% empty %}
         <p>Постов пока нет.</p>
     {% endfor %}
+    {% if page_obj.has_other_pages %}
+        <div>
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
+            {% endif %}
+            {% for num in page_obj.paginator.page_range %}
+                <a href="?page={{ num }}" {% if page_obj.number == num %}style="font-weight:bold;"{% endif %}>{{ num }}</a>
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">Следующая</a>
+            {% endif %}
+        </div>
+    {% endif %}
     {% if user.is_authenticated %}
         <p>
             <a href="{% url 'users:logout' %}">Выйти</a>
